lead create depense
okoko

--- a/src/main/resources/templates/lead/show-details.html
+++ b/src/main/resources/templates/lead/show-details.html
@@ -89,6 +89,10 @@
                                     <br>
                                     <p class="text-muted" th:text="${lead.employee.username}"></p>
                                 </div>
+                                <div class="col-md-4 col-xs-6"> <strong>Expense</strong>
+                                    <br>
+                                    <p class="text-muted" th:text="${leadExpense.amount}"></p>
+                                </div>
                                 <div class="col-md-12">
                                     <h4>
                                         <i class="fa fa-paperclip m-r-10 m-b-10"></i>
