--- a/src/main/resources/templates/lead/create-lead.html
+++ b/src/main/resources/templates/lead/create-lead.html
@@ -120,14 +120,14 @@
                                 <div class="form-group">
                                     <div class="dropzone" id="my-dropzone"></div>
                                 </div>
-
                                 <label class="m-t-20" for="expense">Expense:</label>
                                 <div class="input-group">
-                                    <input type="text" id="expense" th:field="*{expense}" class="form-control">
+                                    <input type="text" id="expense" name="expense" class="form-control">
                                 </div>
-                                <div class="input-group">
-                                    <span class="text-danger font-weight-bold" th:if="${#fields.hasErrors('expense')}" th:errors="*{expense}"></span>
-                                </div>
+
+                                <!-- <div class="input-group">
+                                    <span class="text-danger font-weight-bold" th:if="${#fields.hasErrors('amount')}" th:errors="*{amount}"></span>
+                                </div> -->
 
                                 <div th:if="${hasGoogleDriveAccess}" class="col-md-5 m-b-15 custom-control custom-checkbox">
                                     <input type="checkbox" class="custom-control-input trigger-emails" th:id="googleDrive" th:field="*{googleDrive}">
