--- a/src/main/resources/templates/ticket/show-ticket.html
+++ b/src/main/resources/templates/ticket/show-ticket.html
@@ -93,6 +93,10 @@
                                     <br>
                                     <p class="text-muted" th:text="${ticket.employee.username}"></p>
                                 </div>
+                                <div class="col-md-4 col-xs-6"> <strong>Expense</strong>
+                                    <br>
+                                    <p class="text-muted" th:text="${ticketExpense != null ? ticketExpense.amount : 'No expense recorded'}"></p>
+                                </div>
                             </div>
                             <hr>
                             <p class="m-t-30" th:utext="${ticket.description}"></p>
