--- a/src/main/resources/templates/general/left-sidebar.html
+++ b/src/main/resources/templates/general/left-sidebar.html
@@ -113,6 +113,7 @@
                         <li><a th:href="${home + 'employee/customer/create-customer'}">Create customer</a></li>
                     </ul>
                 </li>
+
                 <li th:if="${#authorization.expression('hasRole(''ROLE_MANAGER'')')}" class="nav-small-cap">--- Data
                 </li>
                 <li>
@@ -240,6 +241,17 @@
                     <a class="waves-effect waves-dark" th:href="${home + 'customer/my-contracts'}">
                         <i class="fas fa-file-contract"></i>
                         <span class="hide-menu">My Contracts</span>
+                    </a>
+                </li>
+                <li class="nav-small-cap">--- Budget</li>
+                <li>
+                    <a class="waves-effect waves-dark" th:href="${home + 'customer/budget/create'}">
+                        <i class="fas fa-file-contract"></i>
+                        <span class="hide-menu">Add budget</span>
+                    </a>
+                    <a class="waves-effect waves-dark" th:href="${home + 'customer/budget/my-budgets'}">
+                        <i class="fas fa-file-contract"></i>
+                        <span class="hide-menu">My budgets</span>
                     </a>
                 </li>
             </ul>
